@@ -55,9 +55,9 @@ RUBY
 TEXT
     inject_into_file 'config/environments/development.rb', gmail_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
     inject_into_file 'config/environments/production.rb', gmail_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
-    append_file 'config/local_env.example.yml' do <<-FILE
-GMAIL_USERNAME: 'Your_Username'
-GMAIL_PASSWORD: 'Your_Password'
+    append_file 'config/application.yml' do <<-FILE
+# GMAIL_USERNAME: Your_Username
+# GMAIL_PASSWORD: Your_Password
 FILE
     end
   end
@@ -76,9 +76,9 @@ FILE
 TEXT
     inject_into_file 'config/environments/development.rb', sendgrid_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
     inject_into_file 'config/environments/production.rb', sendgrid_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
-    append_file 'config/local_env.example.yml' do <<-FILE
-SENDGRID_USERNAME: 'Your_Username'
-SENDGRID_PASSWORD: 'Your_Password'
+    append_file 'config/application.yml' do <<-FILE
+# SENDGRID_USERNAME: Your_Username
+# SENDGRID_PASSWORD: Your_Password
   FILE
     end
   end
@@ -95,9 +95,9 @@ SENDGRID_PASSWORD: 'Your_Password'
   TEXT
     inject_into_file 'config/environments/development.rb', mandrill_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
     inject_into_file 'config/environments/production.rb', mandrill_configuration_text, :after => 'config.action_mailer.default :charset => "utf-8"'
-    append_file 'config/local_env.example.yml' do <<-FILE
-MANDRILL_USERNAME: 'Your_Username'
-MANDRILL_API_KEY: 'Your_API_Key'
+    append_file 'config/application.yml' do <<-FILE
+# MANDRILL_USERNAME: Your_Username
+# MANDRILL_API_KEY: Your_API_Key
 FILE
     end
   end
